--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx nodemon backend/server.js",
-    "dev": "set NODE_ENV=development&& npx nodemon backend/server.js",
+    "dev":"concurrently --kill-others \"set NODE_ENV=development&& npx nodemon backend/server.js\"  \"npm run vite\"",
+    "vite": "cd frontend && vite",
     "prod": "set NODE_ENV=production&& npx nodemon backend/server.js",
-    "seeder": "node backend/utils/seeder.js"
+    "seeder": "node backend/utils/seeder.js",
+    "build": "cd frontend && vite build",
+    "preview": "vite preview"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.2",
+    "axios": "^1.2.1",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,6 +30,17 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.1",
     "nodemailer": "^6.8.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.1",
+    "react-router-dom": "^6.6.1",
     "validator": "^13.7.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "concurrently": "^7.6.0",
+    "vite": "^4.0.0"
   }
 }
