--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-hook-form": "^7.41.1",
     "react-router-dom": "^6.6.1",
     "sharp": "^0.31.3",
+    "string-width": "^5.1.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
