--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
@@ -24,6 +27,8 @@
     "react-hook-form": "^7.41.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
+    "react-share": "^4.4.1",
+    "react-social-icons": "^5.15.0",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
