--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.6.1",
     "react-share": "^4.4.1",
     "react-social-icons": "^5.15.0",
+    "react-stripe-checkout": "^2.6.3",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
