--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.8.0",
     "sharp": "^0.31.3",
     "string-width": "^5.1.2",
+    "stripe": "^11.6.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
