--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^6.8.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
+    "path": "^0.12.7",
     "sharp": "^0.31.3",
     "string-width": "^5.1.2",
     "stripe": "^11.6.0",
