--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-social-icons": "^5.15.0",
     "react-stripe-checkout": "^2.6.3",
     "redux-thunk": "^2.4.2",
+    "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
   },
   "devDependencies": {
