--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,10 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@vitejs/plugin-react": "^3.0.0",
     "axios": "^1.2.1",
     "path": "^0.12.7",
     "react": "^18.2.0",
@@ -32,13 +30,10 @@
     "react-social-icons": "^5.15.0",
     "react-stripe-checkout": "^2.6.3",
     "redux-thunk": "^2.4.2",
-    "@vitejs/plugin-react": "^3.0.0",
     "vite": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "@types/react-dom": "^18.0.9"
   }
 }
