--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,11 +29,12 @@
     "react-share": "^4.4.1",
     "react-social-icons": "^5.15.0",
     "react-stripe-checkout": "^2.6.3",
-    "redux-thunk": "^2.4.2",
-    "vite": "^4.0.0"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9"
+    "@types/react-dom": "^18.0.9",    
+    "@vitejs/plugin-react": "^3.0.0",
+    "vite": "^4.0.0"
   }
 }
